--- a/htmx-ktor/src/main/resources/static/test.html
+++ b/htmx-ktor/src/main/resources/static/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>IvyCreek + htmx + Tailwind Example</title>
     <script src="https://cdn.tailwindcss.com"></script>
