--- a/htmx-ktor/src/main/resources/static/test.html
+++ b/htmx-ktor/src/main/resources/static/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>IvyCreek + htmx + Tailwind Example</title>
+    <title>PNutz + htmx + Tailwind Example</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
 </head>
@@ -12,7 +12,7 @@
             <div class="flex h-24 items-center justify-between">
                 <div class="flex items-center">
                     <div>
-                        <img class="h-48 w-auto" src="logo.png" alt="IvyCreek" />
+                        <img class="h-48 w-auto" src="logo.png" alt="PNutz" />
                     </div>
                     <div class="flex-shrink-0">
                         <div class="block">
@@ -37,7 +37,7 @@
             </div>
         </header>
         <main class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
-            <p class="text-2xl text-gray-900">Welcome to the IvyCreek Dashboard. This is where you can find all the
+            <p class="text-2xl text-gray-900">Welcome to the PNutz Dashboard. This is where you can find all the
                 information you need to manage your projects, team, and calendar.</p>
         </main>
     </div>
